feat: happy path for api and clients achieved
